# FlexBisonCompiler

./: Assembly.h  AssignmentsStats.h  CMakeLists.txt  Command.cpp  Command.h  CommandsBlock.cpp  CommandsBlock.h  Condition.cpp  Condition.h  Expression.cpp  Expression.h  Identifier.cpp  Identifier.h  IdentifiersSSA.h  IdentifiersSSAHelper.h  IdentifiersUsagesHelper.h  MachineContext.h  Makefile  MemoryManager.cpp  MemoryManager.h  Number.cpp  Number.h  NumberValueStats.h  Position.h  Program.cpp  Program.h  ProgramFlags.h  README.md  Utils.h  Value.cpp  Value.h  Variable.cpp  Variable.h  bison.tab.c  bison.tab.h  bisonold.y  compiler  compiler.l  compiler.y  lex.yy.c  (+5 more)
cmdParts/: Expression.cpp  Expression.h  Identifier.h  IdentifiersAssignmentsHelper.h  IdentifiersUsagesHelper.h  Number.h  Variable.h
cmds/: Assignment.h  AssignmentsStats.h  Command.h  CommandsBlock.h  For.h  If.h  IfElse.h  Read.h  While.h  Write.h
jftt2017-testy/: 2-fib.imp  compiler  prog
labor4/: interpreter-cln  log.txt  prog
tests/: assert.sh
tests/compilation/: test.sh
tests/compilation/comment/: test_comment.i
tests/compilation/const_expr/: test_division.i  test_division_0_both.i  test_modulo.i  test_multiplication.i  test_multiplication_0_both.i  test_subtraction.i
tests/compilation/read/: test_read_too_few_args.i  test_read_too_many_args.i
tests/compilation/var/: test_var_array_0.i  test_var_redeclared_array.i
tests/exec/: test.sh
tests/execution/: .fuse_hidden00002bd800000001  test.sh
tests/execution/final-tests/: 2-fib.imp  4-factorial.i  5-tab.i  6-mod-mult.t  9-sort.i  (+1 more)
(+28 files in other folders)
